--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <h2>أنواع العيادات المتنقلة</h2>
     
-        <div class="cards">
+        <div class="app_cards">
           <!-- Card 1 -->
           <div class="app_card">
             <img src="./images/type1.png" alt="عيادات الإسعاف الأولي">
